# FLORA

./: .gitignore  .pre-commit-config.yaml  DEPLOYMENT_GUIDE.md  README.md  README_FINAL.md  SECURITY_REPORT.md  enc.json  install.bat  install.sh  msg.dec.txt  msg.enc.json  pyproject.toml  requirements.txt  setup.py  test_flora.py
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd-fixed.yml  ci-cd.yml  ci.yml
api/: README.md  config.py  main.py  requirements.txt  simple_api.py  test_api.py  test_simple.py
benchmarks/: performance_test.py  simple_benchmark.py
browser-extension/: README.md  background.js  build-wasm.bat  build-wasm.sh  content.css  content.js  create-icons.html  flora-wasm.wasm  flora_wasm.js  manifest.json  popup.css  popup.html  popup.js  test-page.html
browser-extension/icons/: create-icons.ps1
docs/: ERRORES_SOLUCIONADOS.md  FASE3_COMPLETADA.md  FASE4_PASO1_COMPLETADO.md  FASE4_PLAN.md  FASE4_PROGRESO.md  KYBER_BACKEND_GUIDE.md
mobile-app/: App.js  App.tsx  README.md  app.json  package-expo.json  package.json  quick-test.ps1  setup-test.bat  test-app.js  test-install.ps1  web-test.html
mobile-app/flora-test/: App.js  app.json  package.json
mobile-app/src/screens/: DecryptScreen.tsx  EncryptScreen.tsx  FilesScreen.tsx  HomeScreen.tsx  SecurityScreen.tsx  SettingsScreen.tsx
security/: .gitlab-ci.yml  README.md  __init__.py  actions_versions_config.json  artifact_fix_report.json  ci_fix_report.json  cors_config.json  deploy.bat  deploy.sh  fix_artifact_deprecation.py  fix_github_tests.py  fix_logging.py  fix_surgical.py  fix_syntax_complete.py  fix_workflow_final.py  fix_workflow_location.py  https_config.json  init_databases.py  install_security_deps.py  logging_config.json  monitoring_config.json  nginx.conf  optimization_report.json  optimization_report_improved.json  optimize_system.py  pentest_report_PENTEST-20250905-155828.json  performance_config.json  production_config.json  production_setup_report.json  prometheus.yml  python_versions_config.json  rate_limit_config.json  requirements-security.txt  run_tests.py  setup_production.py  test_api_simple.py  test_matrix_config.json  validation_rules.json  verify_fix.py  verify_workflow.sh  (+2 more)
security/.github/workflows/: ci-cd.yml
security/audit/: security_auditor.py
security/compliance/: compliance_manager.py
security/dashboard/: security_dashboard.py  security_dashboard_fixed.py
security/dashboard/templates/: dashboard.html
security/dashboards/: flora-dashboard.json
security/docs/ci-cd/: TROUBLESHOOTING.md
security/docs/github-actions/: MIGRATION_GUIDE.md
security/docs/production/: README.md  TROUBLESHOOTING.md
security/k8s/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
security/scripts/: backup.sh  crontab  restore.sh
security/temp_cleanup/: README.md  requirements-security.txt
security/templates/: basic-tests.yml  security-tests.yml
security/testing/: penetration_tester.py  vulnerability_scanner.py
src/cpp/: CMakeLists.txt
src/cpp/examples/: example_encrypt.cpp
src/cpp/include/flora/: aes_gcm.hpp  c_api.h
src/cpp/src/: aes_gcm.cpp  c_api.cpp
src/flora/: __init__.py
src/python/: __init__.py  api.py  chaotic_map.py  cli.py  ffi_cpp.py  ffi_rust.py  flora_crypto.py  kyber_kem.py
src/rust/flora-rs/: Cargo.toml
src/rust/flora-rs/src/: lib.rs
src/rust/flora-wasm/: Cargo.toml
src/rust/flora-wasm/src/: lib.rs
