[package]
name = "flora-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes-gcm = "0.10.3"
rand = { version = "0.8.5", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
hex = "0.4.3"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlFormElement",
  "Event",
  "EventTarget",
  "KeyboardEvent",
  "MouseEvent",
]

[profile.release]
lto = true
opt-level = "s"
